# fitbit-client-python

./: .gitignore  DEVELOPMENT.md  README.md  STYLE.md  TODO.md  auth.py  client.py  codecov.yml  main.py  pyproject.toml  secrets.json.example  standardize_mock_responses.py
.github/workflows/: ci.yml
auth/: callback_handler.py  callback_server.py  oauth.py
client/: __init__.py  resource_methods_mixin.py
docs/: DEVELOPMENT.md  ERROR_HANDLING.md  LINTING.md  LOGGING.md  NAMING.md  NAMING_AND_TYPING.md  PAGINATION.md  RATE_LIMITING.md  SECURITY.md  STYLE.md  TYPES.md  VALIDATIONS.md  VALIDATIONS_AND_EXCEPTIONS.md
fitbit_client/: __init__.py  __init__.py,cover  client.py  client.py,cover  exceptions.py  exceptions.py,cover  log_utils.py
fitbit_client/auth/: __init__.py  __init__.py,cover  callback_handler.py  callback_handler.py,cover  callback_server.py  callback_server.py,cover  oauth.py  oauth.py,cover
fitbit_client/client/: __init__.py  fitbit_client.py  resource_methods_mixin.py
fitbit_client/resources/: __init__.py  __init__.py,cover  _base.py  _constants.py  _pagination.py  active_zone_minutes.py  active_zone_minutes.py,cover  activezone.py  activity.py  activity.py,cover  activity_timeseries.py  activity_timeseries.py,cover  base.py  base.py,cover  body.py  body.py,cover  body_timeseries.py  body_timeseries.py,cover  breathing_rate.py  breathing_rate.py,cover  breathingrate.py  cardio_fitness.py  cardio_fitness_score.py  cardio_fitness_score.py,cover  constants.py  constants.py,cover  device.py  device.py,cover  ecg.py  electrocardiogram.py  electrocardiogram.py,cover  friends.py  friends.py,cover  heartrate_timeseries.py  heartrate_timeseries.py,cover  heartrate_variability.py  heartrate_variability.py,cover  intraday.py  intraday.py,cover  irregular_rhythm.py  (+17 more)
fitbit_client/utils/: __init__.py  __init__.py,cover  curl_debug_mixin.py  date_validation.py  date_validation.py,cover  helpers.py  helpers.py,cover  pagination_validation.py  pagination_validation.py,cover  types.py  types.py,cover
lint/: add_file_headers.py
resources/: activezone.py  activity.py  activity_timeseries.py  base.py  body.py  body_timeseries.py  breathingrate.py  cardio_fitness.py  constants.py  device.py  ecg.py  friends.py  heartrate_timeseries.py  heartrate_variability.py  irregular_rhythm.py  nutrition.py  nutrition_timeseries.py  profile.py  sleep.py  spo2.py  subscription.py  temperature.py  user.py
scripts/: add_file_headers.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_method_aliases.py
tests/auth/: test_callback_handler.py  test_callback_server.py  test_oauth.py
tests/client/: __init__.py  test_client.py  test_resource_aliases.py
tests/fitbit_client/: __init__.py  test_client.py  test_exceptions.py
tests/fitbit_client/auth/: __init__.py  test_callback_handler.py  test_callback_server.py  test_oauth.py
tests/fitbit_client/resources/: __init__.py  test_base.py  test_docstrings.py  test_pagination.py
tests/fitbit_client/utils/: __init__.py  test_curl_debug_mixin.py  test_date_validation.py  test_helpers.py  test_pagination_validation.py
tests/resources/: test_active_zone_minutes.py  test_activity.py  test_activity_timeseries.py  test_base.py  test_base_exceptions.py  test_body.py  test_body_timeseries.py  test_breathingrate.py  test_cardio_fitness.py  test_cardio_fitness_score.py  test_device.py  test_docstrings.py  test_electrocardiogram.py  test_friends.py  test_heartrate_timeseries.py  test_heartrate_variability.py  test_irregular_rhytym_notification.py  test_nutrition.py  test_nutrition_timeseries.py  test_pagination.py  test_sleep.py  test_spo2.py  test_subscription.py  test_temperature.py  test_user.py
tests/resources/active_zone_minutes/: __init__.py  conftest.py  test_get_azm_timeseries.py  test_get_azm_timeseries_by_date.py  test_get_azm_timeseries_by_interval.py
tests/resources/activity/: __init__.py  conftest.py  test_create_activity_goals.py  test_create_activity_log.py  test_create_favorite_activity.py  test_delete_activity_log.py  test_delete_favorite_activity.py  test_get_activity_goals.py  test_get_activity_log_list.py  test_get_activity_tcx.py  test_get_activity_type.py  test_get_all_activity_types.py  test_get_daily_activity_summary.py  test_get_favorite_activities.py  test_get_frequent_activities.py  test_get_lifetime_stats.py  test_get_recent_activity_types.py
tests/resources/activity_timeseries/: __init__.py  conftest.py  test_get_activity_timeseries.py  test_get_activity_timeseries_by_date.py  test_get_activity_timeseries_by_date_range.py
tests/resources/body/: __init__.py  conftest.py  test_create_bodyfat_goal.py  test_create_bodyfat_log.py  test_create_weight_goal.py  test_create_weight_log.py  test_delete_bodyfat_log.py  test_delete_weight_log.py  test_get_body_goals.py  test_get_bodyfat_log.py  test_get_weight_logs.py
tests/resources/body_timeseries/: __init__.py  conftest.py  test_get_body_timeseries_by_date.py  test_get_body_timeseries_by_date_range.py  test_get_bodyfat_timeseries_by_date.py  test_get_bodyfat_timeseries_by_date_range.py  (+2 more)
tests/sample_responses/: activity.get_activity_goals.json  activity.get_activity_logs.json  activity.get_activity_tcx.xml  activity.get_activity_type.json  activity.get_all_activity_types.json  activity.get_daily_activity_summary.json  activity.get_favorite_activities.json  activity.get_frequent_activities.json  activity.get_lifetime_stats.json  activity.get_recent_activities.json  activity_timeseries.get_time_series_by_date.json  activity_timeseries.get_time_series_by_date_range.json  api_not_found.json  breathingrate.get_breathing_rate_summary_by_date.json  breathingrate.get_breathing_rate_summary_by_interval.json  ecg.get_ecg_log_list.json  friends.get_friends.json  friends.get_friends_leaderboard.json  method_checklist.md  sleep.get_sleep_goal.json  sleep.get_sleep_log_by_date.json  sleep.get_sleep_log_by_date_range.json  sleep.sleep.get_sleep_log_list.json
tests/utils/: test_curl_debug_mixin.py  test_date_validation.py  test_helpers.py  test_pagination_validation.py
(+251 files in other folders)
