[project]
name = "fitbit-client"
version = "0.2.0"
authors = [
    { name = "Jon Stroop", email = "jsfitbit-client@jopast.io" },
]
description = "A Python client for the Fitbit API"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Typing :: Typed"
]

license = "AGPL-3.0-only"
license-files = ["LICENSE"]

dependencies = [
    "requests-oauthlib>=1.3.0",
    "pyOpenSSL>=25.0.0",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "mdformat>=0.7.21",
    "mdformat-gfm>=0.4.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mdformat-pyproject>=0.0.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 100
target-version = ['py312']
preview = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
force_sort_within_sections = true
known_first_party = ["fitbit_client"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"


[tool.mdformat]
number = true
wrap = 80
extensions = [
    "gfm"
]
codeformatters = [
     "python",
     "json"
]

[tool.pdm.scripts]
fmt = { composite = [
    "black .", 
    "isort .",
    "mdformat ."
] }

